--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: csharp
 solution: PKHeX.sln
 install:
- - nuget restore PKHeX.sln
- - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+ - nuget 4.1.0
+ - nuget restore PKHeX.sln -Verbosity detailed
+ - nuget update PKHeX.sln -Verbosity detailed
 mono: 5.8.0
