--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: csharp
 solution: PKHeX.sln
+install:
+  - curl -L -o nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+  - mono nuget.exe restore PKHeX.sln
 mono: 5.8.0
